--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-  <canvas id="tablero" ></canvas>
+  <h1>Rock Scissors Paper Battle Royale</h1>
+  <canvas id="tablero"></canvas>
   <div id="buttons">
     <button id="start">Start</button>
     <button id="reset">Reset</button>
